--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--TODO alt for images , auto modals , change images with jquery " --> 
     <div class="container">
     <div class="row">
-      <div class="col-md-6"><img class="title-logo img-circle" src="./images/100x100"></div>
+      <div class="col-md-6"><img class="title-logo" src="./images/udacity-logo.jpg"></div>
       <div class="col-md-6 text-right text-uppercase" >
         <h1 class="text-thin title-super">Jane Doette</h1>
         <h3>Front-end Ninja</h3>
