--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-      <img class="img-responsive" src="./images/1140x350" data-toggle="modal" data-target="#project1">
+      <img class="img-responsive" src="./images/big.png" data-toggle="modal" data-target="#project1">
       </div>
     </div>
     <div class="row">
@@ -36,18 +36,18 @@
     </div>
     <div class="row text-center" >
       <div class="col-md-4" >
-        <img src="./images/555x300" class="img-responsive">
+        <img src="./images/appify.png" class="img-responsive">
         <h3  class="text-uppercase">Appify</h3>
         <p><a href="http://github.com/" class="image-link">https://github.com/udacity/Appify/</a></p>
       </div>
       <div class="col-md-4">
-        <img src="./images/555x300" class="img-responsive">
+        <img src="./images/sunflower.png" class="img-responsive">
         <h3 class="text-uppercase">Sunflower</h3>
         <p><a href="http://github.com/" class="image-link">https://github.com/udacity/Sunflower/</a></p>
       </div>    
     
       <div class="col-md-4">
-        <img src="./images/555x300" class="img-responsive">
+        <img src="./images/bokeh.png" class="img-responsive">
         <h3 class="text-uppercase">bokeh</h3>
         <p><a href="http://github.com/" class="image-link">https://github.com/udacity/bokeh/</a></p> 
       </div>
