--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script  src="js/jquery-1.11.2.min.js"></script>
     <script  src="js/bootstrap.min.js"></script>
+    <script  src="js/resume.js"></script>
   </head>
   <body>
     <!--TODO: alt for images , auto modals , change images with jquery " --> 
@@ -36,17 +37,17 @@
       </div>
       <div class="row text-center" >
         <div class="col-md-4" >
-          <img src="./images/appify.png" class="img-responsive" alt="apple button">
+          <img src="./images/appify.png" class="img-responsive" alt="apple button" data-toggle="modal" data-target="#project1">
           <h3  class="text-uppercase">Appify</h3>
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/Appify/</a></p>
         </div>
         <div class="col-md-4">
-          <img src="./images/sunflower.png" class="img-responsive" alt="sunflower">
+          <img src="./images/sunflower.png" class="img-responsive" alt="sunflower" data-toggle="modal" data-target="#project1">
           <h3 class="text-uppercase">Sunflower</h3>
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/Sunflower/</a></p>
         </div>    
         <div class="col-md-4">
-          <img src="./images/bokeh.png" class="img-responsive" alt="bright day">
+          <img src="./images/bokeh.png" class="img-responsive" alt="bright day" >
           <h3 class="text-uppercase">bokeh</h3>
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/bokeh/</a></p>
         </div>
@@ -56,15 +57,11 @@
     </div>
     <!-- Modal -->
     <!--TODO add modal with arguments for the image to all page images -->
-    <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="project1" tabindex="-1" role="dialog">
       <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
-          </div>
+        <div class="modal-content">          
           <div class="modal-body">
-          <img class="img-responsive" src="images/1140x350" alt="html code">
-            This was my first project in this class. I learned a lot about HTML and CSS.
+            <img class="img-responsive" src="./images/big.png" alt="html code">          
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
