add modal to other image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/Sunflower/</a></p>
         </div>    
         <div class="col-md-4">
-          <img src="./images/bokeh.png" class="img-responsive" alt="bright day" >
+          <img src="./images/bokeh.png" class="img-responsive" alt="bright day" data-toggle="modal" data-target="#project1">
           <h3 class="text-uppercase">bokeh</h3>
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/bokeh/</a></p>
         </div>
