--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mockup Portfolio Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet'>
