force centered for small images in all formats

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive" src="./images/big.png" data-toggle="modal" data-target="#project1" alt="html code">
+          <img class="img-responsive center-block" src="./images/big.png" data-toggle="modal" data-target="#project1" alt="html code">
         </div>
       </div>
       <div class="row">
@@ -38,17 +38,17 @@
       </div>
       <div class="row text-center" >
         <div class="col-md-4" >
-          <img src="./images/appify.png" class="img-responsive" alt="apple button" data-toggle="modal" data-target="#project1">
+          <img src="./images/appify.png" class="img-responsive center-block" alt="apple button" data-toggle="modal" data-target="#project1">
           <h3  class="text-uppercase">Appify</h3>
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/Appify/</a></p>
         </div>
         <div class="col-md-4">
-          <img src="./images/sunflower.png" class="img-responsive" alt="sunflower" data-toggle="modal" data-target="#project1">
+          <img src="./images/sunflower.png" class="img-responsive center-block" alt="sunflower" data-toggle="modal" data-target="#project1">
           <h3 class="text-uppercase">Sunflower</h3>
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/Sunflower/</a></p>
         </div>
         <div class="col-md-4">
-          <img src="./images/bokeh.png" class="img-responsive" alt="bright day" data-toggle="modal" data-target="#project1">
+          <img src="./images/bokeh.png" class="img-responsive center-block" alt="bright day" data-toggle="modal" data-target="#project1">
           <h3 class="text-uppercase">bokeh</h3>
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/bokeh/</a></p>
         </div>
