--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <script  src="js/resume.js"></script>
   </head>
   <body>
-    <!--TODO: alt for images , auto modals , change images with jquery " -->
     <div class="container">
       <div class="row">
         <div class="col-md-6"><img class="title-logo" src="./images/udacity-logo.jpg" alt="udacity logo"></div>
@@ -53,11 +52,8 @@
           <p><a href="http://github.com/" class="image-link">https://github.com/udacity/bokeh/</a></p>
         </div>
       </div>
-
-
     </div>
     <!-- Modal -->
-    <!--TODO add modal with arguments for the image to all page images -->
     <div class="modal fade" id="project1" tabindex="-1" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -70,4 +66,5 @@
         </div>
       </div>
     </div>
-  </body></html>
+  </body>
+</html>
